--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"svelte": "^5.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.0.8",
+		"js-yaml": "^4.1.0",
+		"tailwindcss": "^4.0.8"
 	}
 }
