--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"sass": "^1.85.1",
 		"svelte": "^5.0.0",
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.0.8",
+		"devalue": "^5.1.1",
 		"js-yaml": "^4.1.0",
 		"tailwindcss": "^4.0.8"
 	}
