--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/vite": "^4.0.8",
 		"devalue": "^5.1.1",
 		"js-yaml": "^4.1.0",
+		"lucide-svelte": "^0.476.0",
 		"tailwindcss": "^4.0.8"
 	}
 }
